# eval-harness-pro

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE_DECISIONS.md  PROJECT_SCOPE.md  RELEASE_PROCESS.md  ROADMAP_2026.md  RUNBOOK.md  TESTING_STRATEGY.md
examples/: dataset.jsonl  suite.yaml
src/eval_harness/: __init__.py  cli.py  dataset.py  diff.py  judges.py  renderer.py  runner.py  schema.py  targets.py
tests/: test_cli.py  test_diff.py  test_judges.py  test_renderer.py  test_runner.py
